# paper

./: CMakeLists.txt  README.md
CMake/: FindLibLZMA.cmake  FindQREncode.cmake  SetFlags.cmake  Warnings.cmake
src/PaperCLI/: CMakeLists.txt  PaperCLI.cpp  PaperCLI.h
src/PaperCommon/: CMakeLists.txt  Functionality.cpp  Functionality.h  QRCode.cpp  QRCode.h
src/PaperCommon/Compression/: LZMA.cpp  LZMA.h
src/PaperCommon/QR/: Coding.cpp  Coding.h  QRCode.cpp  QRCode.h
src/PaperCommon/Render/: SVG.cpp  SVG.h
src/PaperCommon/Util/: FS.cpp  FS.h  IO.cpp  IO.h  Memory.h  Memstream.cpp  Memstream.h
src/PaperTests/: CMakeLists.txt  PaperTests.cpp
src/PaperTests/Tests/: CompressionTest.cpp  CompressionTest.h
